[gd_scene load_steps=2 format=3 uid="uid://bisqex85ape8x"]

[ext_resource type="Script" path="res://Scripts/Characters/Player/dash.gd" id="1_n58b5"]

[node name="Dash" type="Node2D"]
script = ExtResource("1_n58b5")

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="GhostTimer" type="Timer" parent="."]
wait_time = 0.06

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="GhostTimer" to="." method="_on_ghost_timer_timeout"]
